# SauceProject

./: README.md
.github/workflows/: demo.yaml  demo1.yaml  deploy.yml  deployment1.yaml  deployment2.yaml  output.yml  sample.yaml  test.yml
saucedemo/: .gitignore  conftest.py  pyproject.toml
saucedemo/loginpage/: loginpage.py  productspage.py
saucedemo/pages/cart_page/: cart_page.py  locators.py
saucedemo/pages/checkout_page/: checkout_page.py  constants.py  locators.py
saucedemo/pages/confirmation_page/: confirmation_page.py  constants.py  locators.py
saucedemo/pages/inventory_page/: constants.py  inventory_page.py  locators.py
saucedemo/pages/login_page/: constants.py  locators.py  login_page.py
saucedemo/tests/: test_ui.py
saucedemo/tests/cart_page_test/element/: test_cart_elements.py
saucedemo/tests/cart_page_test/workflow/: test_cart_workflow.py
saucedemo/tests/checkout_page_test/element/: test_checkout_elements.py
saucedemo/tests/checkout_page_test/workflow/: test_checkout_workflow.py
saucedemo/tests/confirmation_page/elements/: test_confirmation_elements.py
saucedemo/tests/confirmation_page/workflow/: test_confirmation_workflow.py
saucedemo/tests/inventory_page_test/elements/: test_inventory_elements.py
saucedemo/tests/inventory_page_test/workflow/: test_inventory_workflow.py
saucedemo/tests/login_page_test/elements/: test_login_elements.py
saucedemo/tests/login_page_test/workflow/: test_login_workflow.py
