[project]
name = "saucedemo"
version = "0.1.0"
description = "UI Test Automation for SauceDemo"
authors = [{name = "Pavi2712", email = "pavithra.ramasamy2730@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pytest >=8.3.5, <9.0.0",
    "pytest-playwright >=0.4.4"
]

[tool.poetry]
packages = [{ include = "saucedemo" }]

[tool.poetry.group.dev.dependencies]
playwright = "^1.52.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
